# generative-ai

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-gpu.yml  docker-compose-opensearch.yml  docker-compose-weaviate.yml  docker-compose.yml  requirements.txt
api/: Dockerfile  dependency-setup.sh  pyproject.toml  requirements.txt
api/src/: llms.py  main.py  model_config.py  models.py  run.py
api/src/utils/: elastic.py  inference.py  opensearch_.py
data/: appl_stock.csv
fastapi/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  README.md  package-lock.json  package.json  quasar.config.js  vite.config.ts
jupyter/: Dockerfile  dependency-setup.sh  requirements.txt
jupyter/notebooks/: document_question_answering.ipynb  gguf_large_model.ipynb  knowledge_graphing.ipynb  llamacpp-gguf.ipynb  lora_transformers.ipynb  mixtral_llamacpp.ipynb  mixtral_transformers.ipynb
notebooks/: haystack_rag.ipynb  haystack_rag_with_own_docs.ipynb  haystack_tableqa.ipynb  huggingface_transformers_agent.ipynb  langchain_agents.ipynb  langchain_milvus.ipynb  langchain_opensearch.ipynb  langchain_python_agent.ipynb  langchain_retrievalqa.ipynb  tinyllama.ipynb
notebooks/agents_examples/: huggingface_transformers_agent.ipynb  langchain_agents.ipynb
notebooks/haystack_examples/: haystack_rag.ipynb  haystack_rag_with_own_docs.ipynb  haystack_tableqa.ipynb
streamlit_app/: Dockerfile  dependency-setup.sh  llm_utils.py  prompt_templates.py  requirements-cuda.txt  requirements.txt  sample_data.json
streamlit_app/src/: Home.py  (+4 more)
(+46 files in other folders)
